<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FreeBooksActivity!</string>
    <string name="app_name">FreeBooks</string>
    <string name="library">Library</string>
    <string name="categories">Categories</string>
    <string name="categories1">Categories(s):\u0020</string>
    <string name="subcategories">Subcategories</string>
    <string name="search">Search</string>
    <string name="featured">Featured</string>
    <string name="language">Language</string>
    <string name="language_">Language :</string>
    <string name="language1">Language:\u0020</string>
    <string name="query_">Query :</string>
    <string name="search_">Search :</string>
	<string name="title_">Title :</string>
    <string name="author_">Author :</string>
    <string name="simple_search">Simple Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="spanish">Spanish</string>
    <string name="russian">Russian</string>
    <string name="content">Content</string>
    <string name="comments">Comments</string>
    <string name="all">All</string>
    <string name="by">by\u0020</string>
    <string name="published1">Published In:\u0020</string>
    <string name="words1">Word Count:\u0020</string>
    <string name="results">Results</string>
    <string name="book">Book</string>
    <string name="download">Download</string>
    <string name="categories_loading">Categories page is already loading</string>
    <string name="featured_loading">Featured page is already loading</string>
    <string name="parser_config_exception">A parser configuration exception has occurred</string>
    <string name="parser_exception">A parser exception has occurred</string>
    <string name="malformed_url_exception">A malformed url exception has occurred</string>
    <string name="file_not_found_exception">File not found</string>
    <string name="size_missmatch">Wrong file size, please redownload</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="write_failed">Failed to write file on external storage</string>
    <string name="featured_no_connection">Couldn\'t fetch featured books. Please make sure your internet connection is active</string>
    <string name="categories_no_connection">Couldn\'t fetch categories. Please make sure your internet connection is active</string>
    <string name="results_no_connection">Couldn\'t fetch results. Please make sure your internet connection is active</string>
    <string name="book_no_connection">Failed to fetch all elements. Please make sure your internet connection is active</string>
    <string name="book_in_library">Book already in library</string>
    <string name="overwrite">Overwrite ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="fetching">Fetching book...</string>
    <string name="download_success">Book was added to the library</string>
    <string name="book_no_cover">Couldn\'t  fetch book cover.</string>
    <string name="book_not_exist">Book does not exist.</string>
    <string name="error">An Unknown error has occurred</string>
    <string name="no_results">No books found</string>
    <string name="search_canceled">Search was cancelled</string>
    <string name="open_book">Opening book...</string>
    <string name="failed_images">Some images failed to load</string>
</resources>