<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" >
	

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list"
        android:padding="10dip" >

    <TextView
        android:id="@+id/textQuery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dip"
        android:singleLine="true"
        android:textColor="#406EA1"
        android:text="@string/query_" />

    <AutoCompleteTextView
        android:id="@+id/inputQuery"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dip"
        android:textColor="#406EA1"
        android:text="@string/title_" />


    <AutoCompleteTextView
        android:id="@+id/inputTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dip"
        android:textColor="#406EA1"
        android:text="@string/author_" />


    <AutoCompleteTextView
        android:id="@+id/inputAuthor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:id="@+id/textLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dip"
        android:textColor="#406EA1"
        android:text="@string/language_" />

    <Spinner
        android:id="@+id/spinnerLanguage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:id="@+id/radioGroupSearch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip" >


        <RadioButton
            android:id="@+id/radioSearchSimple"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="#406EA1"
            android:textStyle="bold"
            android:text="@string/simple_search" />

        <RadioButton
            android:id="@+id/radioSearchAdvanced"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#406EA1"
            android:textStyle="bold"
            android:text="@string/advanced_search" />

    </RadioGroup>
    
    </LinearLayout>  
    
</LinearLayout>