<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/bookLayout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
	
    <LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/top" >
	        
	    <ImageView
	    	android:id="@+id/bookImageLoading"
	     	android:layout_width="60dip"
	    	android:layout_height="wrap_content"
	     	android:src="@drawable/loading_animation"
	   		android:gravity="left|center_vertical" />
        
	 	<TextView android:text="@string/book"
        	android:id="@+id/bookResultsHeader"
			android:layout_width="0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="center"
			android:textColor="#fff"
			android:textStyle="bold" />
	    	
	    <View
	    	android:id="@+id/bookPlaceholderRight"
	     	android:layout_width="60dip"
	        android:layout_height="fill_parent"
	    	android:gravity="right" />
	    	
	</LinearLayout>
        
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/bookView"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1" >

         <RelativeLayout
            android:id="@+id/bookLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <TextView
                android:id="@+id/bookTextTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#406EA1" />

			<TextView
				android:id="@+id/bookTextBy"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:text="@string/by"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#4D4D4D"
				android:layout_below="@id/bookTextTitle" />

			<TextView
				android:id="@+id/bookTextAuthor"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
                android:layout_toRightOf="@id/bookTextBy"
                android:layout_below="@id/bookTextTitle"
				android:textStyle="italic"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:textColor="#999"
				android:onClick="onClick"
				android:clickable="true" />

	        <RelativeLayout
            	android:id="@+id/bookLayout2"
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"
				android:background="@drawable/list"
				android:layout_below="@id/bookTextBy"
				android:layout_alignParentRight="true"
				android:layout_alignParentLeft="true"
				android:layout_marginTop="5dip"
				android:layout_marginBottom="5dip"
				android:padding="10dip" >

				<TextView
					android:id="@+id/bookTextLang"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_alignParentTop="true"
					android:layout_alignParentLeft="true"
					android:text="@string/language1"
					android:textColor="#333"
					android:textStyle="bold"
					android:paddingBottom="6dip" />

				<TextView
					android:id="@+id/bookTextLanguage"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_toRightOf="@id/bookTextLang"
					android:layout_alignParentTop="true"
					android:layout_alignBottom="@id/bookTextLang"
					android:textColor="#406EA1"
					android:onClick="onClick"
					android:clickable="true" />
                        
				<TextView
					android:id="@+id/bookTextPub"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/bookTextLang"
					android:text="@string/published1"
					android:textColor="#333"
					android:textStyle="bold"
					android:paddingBottom="6dip" />

				<TextView
					android:id="@+id/bookTextPublished"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_toRightOf="@id/bookTextPub"
					android:layout_below="@id/bookTextLanguage"
					android:layout_alignBottom="@id/bookTextPub"
					android:textColor="#406EA1"
					android:onClick="onClick"
					android:clickable="true" />
                        
				<TextView
					android:id="@+id/bookTextWC"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/bookTextPub"
					android:text="@string/words1"
					android:textColor="#333"
					android:textStyle="bold"
					android:paddingBottom="6dip" />

				<TextView
					android:id="@+id/bookTextWords"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_toRightOf="@id/bookTextWC"
					android:layout_below="@id/bookTextPublished"
					android:layout_alignBottom="@id/bookTextWC"
					android:textColor="#406EA1" />
				
				<TextView
					android:id="@+id/bookTextCat"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_alignParentLeft="true"
					android:layout_below="@id/bookTextWC"
					android:text="@string/categories1"
					android:textColor="#333"
					android:textStyle="bold"
					android:paddingBottom="6dip" />

				<TextView
					android:id="@+id/bookTextCategories"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:layout_toRightOf="@id/bookTextCat"
					android:layout_below="@id/bookTextWords"
					android:layout_alignBottom="@id/bookTextCat"
					android:textColor="#406EA1"
					android:singleLine="true"
					android:onClick="onClick"
					android:clickable="true" />

				<TextView
					android:id="@+id/bookTextCategories2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toRightOf="@id/bookTextCategories"
					android:layout_below="@id/bookTextWords"
					android:layout_alignBottom="@id/bookTextCat"
					android:layout_marginRight="69dip"
					android:textColor="#406EA1"
					android:singleLine="true"
					android:onClick="onClick"
					android:clickable="true" />
				
				<ImageView
            		android:id="@+id/bookImage"
        			android:layout_width="69dip"
					android:layout_height="92dip"
					android:layout_alignParentRight="true"
            		android:layout_alignParentTop="true"
            		android:layout_alignParentBottom="true"
            		android:layout_centerVertical="true"
            		android:padding ="5px"
            		android:scaleType="fitXY"
            		android:src="@drawable/book_cover" />
	    
	    		<ImageView
            		android:id="@+id/bookImageCover"
        			android:layout_width="69dip"
					android:layout_height="92dip"
					android:layout_alignParentRight="true"
           			android:layout_alignParentTop="true"
           			android:layout_alignParentBottom="true"
           			android:layout_centerVertical="true"
            		android:scaleType="fitXY"
            		android:src="@drawable/book_cover_deco" />
			
				</RelativeLayout>
				
	            <TextView
            		android:id="@+id/bookTextCont"
            		android:layout_width="wrap_content"
            		android:layout_height="wrap_content"
           			android:text="@string/content"
            		android:textAppearance="?android:attr/textAppearanceMedium"
            		android:textColor="#406EA1"
            		android:layout_below="@id/bookLayout2"
            		android:layout_alignParentLeft="true"
            		android:layout_marginBottom="5dip" />
				
	            <LinearLayout
	                android:id="@+id/bookContentLayout"
	                android:layout_width="fill_parent"
                	android:layout_height="wrap_content"
                	android:orientation="vertical"
        			android:background="@drawable/list"
        			android:layout_below="@id/bookTextCont"
        			android:padding="10dip" />
	    		
	           <TextView
            		android:id="@+id/bookTextCom"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
           			android:text="@string/comments"
            		android:textAppearance="?android:attr/textAppearanceMedium"
            		android:textColor="#406EA1"
            		android:layout_below="@id/bookContentLayout"
            		android:layout_alignParentLeft="true"
            		android:layout_marginTop="5dip" />

        		<LinearLayout
            		android:id="@+id/bookCommentsLayout"
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:orientation="vertical"
            		android:layout_below="@id/bookTextCom"
            		android:layout_alignParentLeft="true" >


        		</LinearLayout>

        </RelativeLayout>
        
    </ScrollView>
    
	<LinearLayout
		android:orientation="horizontal"
  		android:layout_width="fill_parent"
     	android:layout_height="wrap_content"
   		android:background="@drawable/bottom"
    	android:layout_alignParentBottom="true"
    	android:gravity="center_vertical" >
         
	    <Button
		  	android:id="@+id/bookStopButton"
		 	android:layout_width="0dp"
          	android:layout_height="fill_parent"
         	android:layout_weight="1.0"
        	android:background="@drawable/stop_button" />
	    <Button
		  	android:id="@+id/bookReloadButton"
		 	android:layout_width="0dp"
          	android:layout_height="fill_parent"
         	android:layout_weight="1.0"
        	android:background="@drawable/reload_button" />

		<Button
		  	android:id="@+id/bookDownloadButton"
		 	android:layout_width="0dp"
          	android:layout_height="fill_parent"
         	android:layout_weight="1.0"
        	android:background="@drawable/book_download_button" />
			
	</LinearLayout>
    
</LinearLayout>
